fixed: code container overflowing in mobile view

--- a/src/base.css
+++ b/src/base.css
@@ -276,7 +276,7 @@
 }
 
 .card > img {
-  width: 11.7rem;
+  width: 12.7rem;
 }
 
 .buttonContainer {
